--- a/internal/views/layout.html
+++ b/internal/views/layout.html
@@ -49,8 +49,7 @@
     </div>
     <div>
       <div class="f-title">Ubicación</div>
-      <p>Laprida 4680, Rosario, Santa Fe</p>
-      <a class="link" href="https://maps.google.com/?q=Laprida+4680+Rosario+Santa+Fe" target="_blank" rel="noopener">Ver en Google Maps</a>
+      <p>Zona sur, Rosario, Santa Fe</p>
     </div>
     <div>
       <div class="f-title">Contacto</div>
