--- a/internal/views/home.html
+++ b/internal/views/home.html
@@ -30,7 +30,7 @@
 
 <section style="margin-top:40px">
   <h2 class="title" style="margin-bottom:10px">Destacados</h2>
-  <div class="cards">
+  <div class="cards cards--home">
     {{range .Products}}
     <div class="card">
       <div class="card-media">
